--- a/webBB.css
+++ b/webBB.css
@@ -12,18 +12,20 @@ body {
 
 /* Style the top navigation bar */
 .topnav {
+	margin-left: 240px;
   overflow: hidden;
   background-color: #133;
-  width: 65%;
-  height: 55px
+  width: 62.5%;
+  height: 53px
 }
 
 /* Style the topnav links */
 .topnav a {
+
   float: left;
   display: block;
   color: #f2f2f2;
-  text-align: center;
+  text-align: left;
   padding: 14px 16px;
   text-decoration: none;
 }
@@ -38,12 +40,23 @@ body {
 .content {
   background-color: #ddd;
   padding: 10px;
-  height: 600px; /* Should be removed. Only for demonstration */
+  height: 380px;
   border: 3px solid black;
   margin-top: 50px;
   margin-bottom: 50px;
   margin-right: 80px;
-  margin-left: 40px;
+  margin-left: 80px;
+  background-color: lightblue;
+}
+.content1 {
+  background-color: #ddd;
+  padding: 10px;
+  height: 640px;
+  border: 3px solid black;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  margin-right: 80px;
+  margin-left: 80px;
   background-color: lightblue;
 }
 
@@ -65,7 +78,7 @@ body {
 
 div {
   border: 1px solid black;
-  margin-top: 100px;
+  margin-top: 50px;
   margin-bottom: 100px;
   margin-right: 150px;
   margin-left: 80px;
